# slicer

./: LICENSE  README.md  agents  pyproject.toml
src/kaleido_scope/: __init__.py  pipeline.py  schema.py
src/kaleido_scope/effects/: __init__.py  kaleido.py
src/scope_date_type/: pipeline.py
src/scope_slicer/: pipeline.py
src/scope_slicer/effects/: __init__.py
src/slicer/: __init__.py  pipeline.py  schema.py
src/slicer/effects/: __init__.py  slicer.py
