[project]
name = "kaleido-scope"
version = "0.1.0"
description = "GPU-accelerated kaleidoscope / mirror effect plugin for Daydream Scope"
license = "MIT"
requires-python = ">=3.12"

[project.entry-points."scope"]
kaleido_scope = "kaleido_scope"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kaleido_scope"]
