[project]
name = "slicer"
version = "0.1.0"
description = "GPU-accelerated slicer effect plugin for Daydream Scope"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
  "torch",
  "pydantic>=2",
]

[project.entry-points."scope"]
slicer = "slicer:SlicerPipeline"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/slicer"]
